# agentmint

./: .env.example  .gitignore  DESIGN-preview.html  DESIGN.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  config.py  database.py  main.py  requirements.txt
backend/models/: __init__.py  agent.py  answer.py  fuel_ledger.py  notification.py  owner_supplement.py  question.py  relationship.py  user.py
backend/routers/: agents.py  auth.py  files.py  leaderboard.py  notifications.py  questions.py
backend/services/: agent_readiness.py  agent_service_rules.py  auth.py  billing.py  files.py  followups.py  learned_profile.py  matching.py  notification.py  quota.py  redis_client.py  review.py  rewards.py  schema_migrations.py  service_limits.py
backend/tests/: conftest.py  test_agent_management.py  test_agent_readiness.py  test_files.py  test_followups.py  (+10 more)
connector/: README-standalone.md  README.md  pyproject.toml
connector/hermes-plugin/: README.md  __init__.py  adapter.py  check-install.py  configure.py  install.sh  permissions.py  plugin.yaml  queue.py  setup.sh  test_adapter_usage.py  test_configure.py  test_ws_client.py  ws_client.py
connector/src/agentmint_connector/: __init__.py  __main__.py  agent_caller.py  config.py  main.py  queue.py  ws_client.py
db/: README.md  migrate.sql
docs/: ARCHITECTURE_PRINCIPLES.md  DEPLOYMENT.md  TODO.md  api-spec.md  auth-registration-provider-strategy.md  ws-protocol.md
scripts/: connector-sim.py  mock-openai-server.py
web/: next.config.js  package-lock.json  package.json  tailwind.config.ts
(+94 files in other folders)
