[project]
name = "agentmint-connector"
version = "0.1.0"
description = "AgentMint Connector — bridge any OpenAI-compatible local agent to the platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
]

[project.scripts]
agentmint-connector = "agentmint_connector.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
